--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ h2::after {
     border: none;
     padding: 5px 20px;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: 20px auto 0;
     text-align: center;
 }
 
